# ModIO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Application/src/: Application.cpp
Application/src/Core/: App.cpp  App.h  NodeEditor.h
Application/src/Synode/: Synode.cpp  Synode.h
Application/src/Synode/Nodes/: GeneratorNode.h  MasterNode.h  SawtoothGeneratorNode.h  SineGeneratorNode.h  SquarewaveGeneratorNode.h  TrianglewaveGeneratorNode.h
External-Project/: README.md
External-Project/LineRenderer/: EntryPoint.cpp  ExampleApplication.cpp  ExampleApplication.h  LineRenderer.vcxproj  LineRenderer.vcxproj.filters
ModIO/: ModIO.sln
ModIO/Engine/: ModIO.vcxproj  ModIO.vcxproj.filters
ModIO/Engine/include/: AudioSession.h  Core.h  Includes.h  ModIO.h
ModIO/Engine/include/Backends/SDL3/: SDLAudioSession.h  SDLHelpers.h  SDLNodeAudioSession.h
ModIO/Engine/include/Core/Interfaces/: AudioComponentInterface.h  AudioGeneratorInterface.h  AudioModifierInterface.h  AudioSessionInterface.h  AudioTransportInterface.h  ParameterModulatorInterface.h
ModIO/Engine/include/Core/Transports/: Chain.h  Master.h  Mixer.h  Signal.h
ModIO/Engine/include/Core/Utility/: Defines.h  Math.h
ModIO/Engine/include/Generators/: SawtoothGenerator.h  SinewaveGenerator.h  SquarewaveGenerator.h  TrianglewaveGenerator.h
ModIO/Engine/include/Modifiers/: Lowpass.h
ModIO/Engine/src/: AudioSession.cpp  ModIO.cpp
ModIO/Engine/src/Backends/SDL3/: SDLAudioSession.cpp  SDLNodeAudioSession.cpp
ModIO/Engine/src/Generators/: SawtoothGenerator.cpp  SinewaveGenerator.cpp  SquarewaveGenerator.cpp  TrianglewaveGenerator.cpp
ModIO/Engine/src/Modifiers/: Lowpass.cpp
ModIO/Sandbox/: Sandbox.vcxproj
ModIO/Sandbox/src/: Sandbox.cpp
Shared/_libs/SDL/Debug/: SDL3.exp
Shared/_libs/SDL/Release/: SDL3.exp
Shared/_premakefiles/: glm-premake5.lua  imgui-premake5.lua
Shared/stb/: STB.vcxproj  premake5.lua
